@@ -14,9 +14,9 @@
 	<Include file = "SpellCooldownLine\SpellCooldownLine.xml"/>
 	<Include file = "ActionBar\ActionBar.xml"/>
 	<Include file = "InfoBar\InfoBar.xml"/>
+	<Include file = "NamePlate\NamePlate.xml"/>
 	<Include file = "RaidPanel\RaidPanel.xml"/>
 	<Include file = "UnitFrame\UnitFrame.xml"/>
-	<Include file = "NamePlate\NamePlate.xml"/>
 	<Include file = "Container\Container.xml"/>
 	<Script file = "Minimap\Minimap.lua"/>
 	<Script file = "ChatFrame\ChatFrame.lua"/>
